feat: create a html body.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <p id="contador">0</p>
         <button id="botao-dec">dec</button>
         <button id="botao">add</button>
+        <button id="botao-reset">reset</button>
     </main>
 
     <script src="script.js"></script>
